# openclaw-orchestration-stack

./: .env.example  .gitignore  ALL_PRS_READY.md  BANKROLL_IMPLEMENTATION_COMPLETE.md  BANKROLL_PRD_TASKS_CREATED.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  LICENSE  Makefile  NEW_PRS_SUMMARY.md  PRD-arb-hunter.md  PRD.md  README.md  SECURITY_FIXES_SUMMARY.md  SYMPHONY_PROJECT_REVIEWS.md  config.yaml  dashboard.html  dashboard.sh  main.py  pyproject.toml  requirements.txt  review_output.txt  review_report.json  run_arb_scanner.py  run_full_code_review.py
.openclaw/: review.yaml
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
config/: default.yml
devclaw-runner/: .env.example  __init__.py
devclaw-runner/deploy/: backup_script.py  docker_compose.yml  dockerfile  health_check.py  install_script.py  operations_runbook.md  pyproject.toml  requirements.txt  systemd_service.py  systemd_timer.py
devclaw-runner/src/: __init__.py  git_ops.py  task_executor.py  worker.py
devclaw-runner/src/arb_hunter/: __init__.py  arb_calculator.py  arb_filter.py  arb_opportunity_schema.py  arb_validator.py  audit_logger.py  calculate_all_arbs.py  category_mapper.py  category_validator.py  config_loader.py  date_matcher.py  entity_extractor.py  fee_calculator.py  fetch_all_sources.py  filter_and_rank.py  job_context.py  liquidity_constraint.py  liquidity_normalizer.py  main_runner.py  market_cache.py  market_normalization_error.py  match_all.py  match_rejection_logger.py  match_result_schema.py  match_scorer.py  matcher_pipeline.py  net_edge_calculator.py  normalize_all.py  normalized_market_schema.py  normalizer_pipeline.py  odds_api_fetcher.py  outcome_mapper.py  polymarket_fetcher.py  polymarket_transformer.py  price_freshness.py  requirements.txt  resolution_semantics.py  send_alerts.py  sizing_calculator.py  slippage_model.py  (+3 more)
devclaw-runner/src/prediction_markets/: arb_scanner.py
devclaw-runner/tests/: __init__.py  test_git_ops.py  test_worker.py
devclaw-runner/tests/arb_hunter/: __init__.py  conftest.py  fixtures.py  test_arb_math.py  test_end_to_end.py  test_failure_modes.py  test_filters.py  test_integration.py  test_matching.py  test_normalization.py  test_notifications.py  test_telegram.py
devclaw-runner/workers/: __init__.py
docker/: Dockerfile  docker-compose.yml  start-all.sh
docker/config/: default.yml
docs/: adapters.md
docs/api/: README.md  rest-api.md  schemas.md  webhooks.md
docs/architecture/: README.md  data-flow.md  database.md  state-machine.md  system-design.md
docs/guides/: README.md  configuration.md  security.md  setup.md  troubleshooting.md
docs/tests/: README.md  test_docs.py
examples/: adapter_demo.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
n8n-workflows/: README.md
n8n-workflows/credentials/: example.json
n8n-workflows/tests/: __init__.py  run_all_tests.sh  test_json_validity.py  test_workflow_integration.py  test_workflow_structure.py
n8n-workflows/workflows/: audit-append.json  notification-send.json  prediction-market-arb.json  review-report.json  task-completed.json  task-create.json
openclaw/: __init__.py
openclaw/config/: routes.yaml
openclaw/cron_jobs/: prediction_market_arb.json
openclaw/dashboard/: README.md  __init__.py  alerts.py  metrics_collector.py  requirements.txt  test_dashboard_server.py  web_dashboard.py
openclaw/dashboard/static/: dashboard.js  index.html  style.css
openclaw/dashboard/tests/: __init__.py  conftest.py  test_alerts.py  test_metrics_collector.py  test_web_dashboard.py
openclaw/prompts/: code-review.txt  system.txt  task-execution.txt  task-routing.txt
openclaw/schemas/: __init__.py  action_plan.py
openclaw/src/: __init__.py  api.py  audit.py  conductor.py  emitter.py  idempotency.py  intent.py  router.py  test_conductor.py
openclaw/src/database/: __init__.py  connection.py  models.py
openclaw/src/ingestion/: README.md  __init__.py  example.py  normalizer.py  prediction_market_client.py  requirements.txt  scheduler.py  sportsbook_client.py  test_ingestion.py
pilot/: README.md  test_python_pilot.py
pilot/monorepo-demo/: README.md  package.json
pilot/monorepo-demo/.openclaw/: review.yaml
pilot/monorepo-demo/apps/backend/: main.py  pyproject.toml  requirements.txt  test_main.py
pilot/monorepo-demo/libs/shared/: Cargo.toml
pilot/monorepo-demo/libs/shared/src/: lib.rs
pilot/node-demo-repo/: README.md  package.json
pilot/python-demo-repo/: calculator.py  requirements.txt  test_calculator.py
pilot/rust-demo-repo/: Cargo.toml  README.md
pilot/rust-demo-repo/.openclaw/: review.yaml
pilot/rust-demo-repo/src/: lib.rs
pilot/rust-demo-repo/tests/: integration_tests.rs
shared/: __init__.py  db.py
shared/config/: README.md  __init__.py  command_runner.py  language_detector.py  profiles.py  review_config.py
shared/migrations/: 001_initial.sql  __init__.py  runner.py
shared/models/: __init__.py
shared/schemas/: __init__.py  audit_events.sql  reviews.sql  schema.sql  seed.sql  tasks.sql
shared/utils/: README.md  __init__.py  db_manager.py  dead_letter.py  deduplication.py  idempotency.py  lease_manager.py
src/: __init__.py  runner.py
src/arbitrage/: __init__.py  calculator.py  database.py  example_usage.py  filters.py  matcher.py  models.py
src/utils/: __init__.py  config.py  logger.py
symphony-bridge/src/: __init__.py  core_review_queue.py  pr_lifecycle.py  review_state_machine.py  webhook_handler.py
symphony-bridge/tests/: __init__.py  conftest.py  test_github_client.py  test_github_labels.py  test_pr_lifecycle.py  test_review_reviewer.py  test_review_summary.py  test_webhook_handler.py
systemd/: openclaw-worker.service  openclaw.service  pred-market-arb.service  pred-market-arb.timer
tests/: __init__.py  conftest.py  test_monorepo.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_openclaw.py  test_schema.py  test_task1_project_structure.py  test_task2_database_schema.py
(+111 files in other folders)
