[tool.poetry]
name = "openclaw"
version = "1.2.1"
description = "Intelligent Orchestration Stack for Development Workflows"
authors = ["OpenClaw Team"]
readme = "README.md"
packages = [
    { include = "openclaw" },
    { include = "devclaw-runner" },
    { include = "symphony-bridge" },
    { include = "shared" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"
httpx = "^0.25.0"
pygithub = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
apscheduler = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
