[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openclaw-arb-hunter"
version = "1.2.1"
description = "Prediction Market Arbitrage Scanner - Find arbitrage opportunities across Polymarket, Kalshi, and PredictIt"
authors = ["OpenClaw Team <team@openclaw.io>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/openclaw/arb-hunter"
repository = "https://github.com/openclaw/arb-hunter"
keywords = ["arbitrage", "prediction-markets", "polymarket", "kalshi", "predictit", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
packages = [
    { include = "openclaw", from = "../.." },
    { include = "devclaw_runner", from = ".." },
    { include = "shared", from = "../.." },
]

[tool.poetry.dependencies]
python = "^3.11"

# HTTP Client
httpx = {extras = ["http2"], version = "^0.25.0"}

# Data Validation & Settings
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Fuzzy Matching
rapidfuzz = "^3.5.0"

# Structured Logging
structlog = "^23.2.0"

# Async Support
anyio = "^4.0.0"

# Database
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"

# Web Framework (for health check endpoint)
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

# Git Operations
pygithub = "^2.1.0"
gitpython = "^3.1.40"

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

# Monitoring & Metrics
prometheus-client = "^0.19.0"
psutil = "^5.9.6"

# Utilities
python-dotenv = "^1.0.0"
click = "^8.1.0"
rich = "^13.7.0"
schedule = "^1.2.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
arb-scanner = "devclaw_runner.src.prediction_markets.arb_scanner:main"
arb-health = "deploy.health_check:main"
arb-backup = "deploy.backup_script:main"
arb-install = "deploy.install_script:main"
arb-service = "deploy.systemd_service:main"
arb-timer = "deploy.systemd_timer:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests", "deploy/tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["devclaw_runner", "deploy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.isort]
profile = "black"
line_length = 100
