[package]
name = "openclaw-shared"
version = "0.1.0"
edition = "2021"
authors = ["OpenClaw Team <team@openclaw.dev>"]
description = "Shared library for OpenClaw monorepo"
license = "MIT"
repository = "https://github.com/openclaw/monorepo"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"

[lib]
name = "openclaw_shared"
path = "src/lib.rs"
